[tool.poetry]
name = "flask-logging"
version = "0.1.0"
description = ""
authors = ["Kostiantyn Salnykov <kostiantyn.salnykov@edvantis.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120